[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scripts/MenuChoicesScript.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Images/Tracing_Dd.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/farmAnimals.png" type="Texture" id=5]
[ext_resource path="res://Scripts/LevelScroll.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/ButtonThemes.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Images/humanbody.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Fruits4.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/leftArrow.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/rightArrow.png" type="Texture" id=11]
[ext_resource path="res://Levels/MgaHayopSaBukid/MgaHayopSaBukid.tscn" type="PackedScene" id=12]
[ext_resource path="res://Levels/1PrutasAtGulay/PrutasAtGulayLevel.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Fonts/fredoka-one/FredokaOne-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Assets/Fonts/fredoka-one/FredokaOne-Regular.otf" type="DynamicFontData" id=15]
[ext_resource path="res://Assets/GUI/Blue_Rectangle.png" type="Texture" id=16]
[ext_resource path="res://Assets/GUI/Blue_Square.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/pilot-logo.png" type="Texture" id=18]
[ext_resource path="res://Assets/Icons/ic_launcher.png" type="Texture" id=19]
[ext_resource path="res://Assets/GUI/Icon_Return.png" type="Texture" id=20]
[ext_resource path="res://Assets/GUI/Icon_LongSquare.png" type="Texture" id=21]
[ext_resource path="res://Assets/UIElements/Icon_SqiuareTilt.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=38]
size = 60
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=39]
size = 60
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=40]
size = 45
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 14 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=41]
size = 45
use_filter = true
font_data = ExtResource( 14 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=33]
size = 22
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=34]
size = 22
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=37]
size = 18
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=36]
size = 18
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
resource_local_to_scene = true
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
resource_local_to_scene = true
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 1208, 653 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 1208, 653 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 192, 192 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 176, 159 )

[sub_resource type="DynamicFont" id=26]
resource_local_to_scene = true
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=42]
size = 40
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 15 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=43]
size = 41
use_filter = true
font_data = ExtResource( 14 )
fallback/0 = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="bloxoftime" type="Label" parent="Panel"]
anchor_left = 0.160156
anchor_top = 0.0266667
anchor_right = 0.835938
anchor_bottom = 0.151667
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 38 )
text = "Blocks of Time"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="bloxoftime" type="Label" parent="Panel/bloxoftime"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 39 )
text = "blocks of time"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="selectTopic" type="Label" parent="Panel"]
anchor_left = 0.174805
anchor_top = 0.113333
anchor_right = 0.84668
anchor_bottom = 0.238333
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 40 )
text = "Pumili ng Paksa sa Ibaba"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="selecttopic" type="Label" parent="Panel/selectTopic"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 41 )
text = "Pumili ng Paksa sa Ibaba"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Panel"]
self_modulate = Color( 1, 1, 1, 0.0392157 )
anchor_left = 0.352539
anchor_top = 0.228333
anchor_right = 0.680664
anchor_bottom = 0.77
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.0195313
anchor_top = 0.271667
anchor_right = 0.974609
anchor_bottom = 1.27833
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 13
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
scroll_vertical_enabled = false
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}
scroll_duration = 0.3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 2254.0
margin_bottom = 226.0
mouse_filter = 2
custom_constants/margin_right = 430
custom_constants/margin_top = 10
custom_constants/margin_left = 430
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_left = 430.0
margin_top = 10.0
margin_right = 1824.0
margin_bottom = 216.0
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 7 )
custom_constants/separation = 150
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Choice1" type="TextureRect" parent="ScrollContainer/MarginContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 206.0
mouse_filter = 2
texture = ExtResource( 9 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CardMenu1" type="Button" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice1"]
self_modulate = Color( 1, 1, 1, 0.32549 )
anchor_left = 0.217262
anchor_top = 0.281818
anchor_right = 0.616071
anchor_bottom = 0.636364
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="prutasAtGulay" type="Label" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -27.0
margin_right = 6.0
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 33 )
text = "prutas at gulay"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="prutasatgulay" type="Label" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice1/prutasAtGulay"]
anchor_top = -0.105263
anchor_right = 1.0
anchor_bottom = 1.05263
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 34 )
text = "prutas at gulay"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Choice2" type="TextureRect" parent="ScrollContainer/MarginContainer/HBoxContainer"]
margin_left = 386.0
margin_right = 622.0
margin_bottom = 206.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CardMenu2" type="Button" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice2"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.305085
anchor_top = 0.295652
anchor_right = 0.65678
anchor_bottom = 0.6
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="farmanimals" type="Label" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -31.0
margin_right = 9.0
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 37 )
text = "mga hayop sa bukid"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="farmanimals" type="Label" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice2/farmanimals"]
anchor_top = -0.105263
anchor_right = 1.0
anchor_bottom = 1.05263
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 36 )
text = "mga hayop sa bukid"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Choice3" type="TextureRect" parent="ScrollContainer/MarginContainer/HBoxContainer"]
margin_left = 772.0
margin_right = 1008.0
margin_bottom = 206.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CardMenu3" type="Button" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice3"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.283898
anchor_top = 0.278261
anchor_right = 0.635593
anchor_bottom = 0.582609
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CardLabel3" type="Label" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice3"]
anchor_left = -0.118644
anchor_top = 0.8
anchor_right = 1.10593
anchor_bottom = 1.0087
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 7
custom_fonts/font = SubResource( 10 )
text = "Pagguhit ng alpabeto"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Choice4" type="TextureRect" parent="ScrollContainer/MarginContainer/HBoxContainer"]
margin_left = 1158.0
margin_right = 1394.0
margin_bottom = 206.0
mouse_filter = 2
theme = ExtResource( 7 )
texture = ExtResource( 8 )
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="CardMenu4" type="Button" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice4"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.34322
anchor_top = 0.234783
anchor_right = 0.694915
anchor_bottom = 0.565217
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CardLabel4" type="Label" parent="ScrollContainer/MarginContainer/HBoxContainer/Choice4"]
anchor_left = -0.233051
anchor_top = 0.791304
anchor_right = 1.22458
anchor_bottom = 1.00435
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 7
custom_fonts/font = SubResource( 11 )
text = "bahagi ng katawan ng tao"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="VisibleBlockerRight" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.596078 )
light_mask = 5
material = SubResource( 7 )
anchor_left = 0.68457
anchor_top = 0.241667
anchor_right = 0.979492
anchor_bottom = 0.778333
margin_top = -4.0
margin_bottom = -4.0
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="RightButton" type="Button" parent="VisibleBlockerRight"]
anchor_right = 0.192811
anchor_bottom = 0.999999
margin_right = -11.3811
margin_bottom = 8.0004
focus_mode = 0
custom_styles/hover = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
enabled_focus_mode = 0
icon = ExtResource( 11 )
flat = true
clip_text = true
align = 2
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="VisibleBlockerLeft" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.313726 )
anchor_left = 0.0214844
anchor_top = 0.213333
anchor_right = 0.306641
anchor_bottom = 0.785
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="LeftButton" type="Button" parent="VisibleBlockerLeft"]
anchor_left = 0.822824
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true
clip_text = true
align = 2
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="GameIcon" type="Panel" parent="."]
anchor_left = 0.0234375
anchor_top = 0.036674
anchor_right = 0.169922
anchor_bottom = 0.269573
custom_styles/panel = SubResource( 29 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="SchoolLogo" type="Panel" parent="."]
anchor_left = 0.830078
anchor_top = 0.036674
anchor_right = 0.976563
anchor_bottom = 0.271202
custom_styles/panel = SubResource( 30 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="gobackCage" type="Control" parent="."]
anchor_left = 0.30957
anchor_top = 0.791667
anchor_right = 0.689453
anchor_bottom = 0.965
margin_right = 0.999939
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="GoBackButton" type="Button" parent="gobackCage"]
anchor_left = 0.130574
anchor_top = 0.1875
anchor_right = 1.0
anchor_bottom = 0.8125
custom_fonts/font = SubResource( 26 )
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pressGoBack" type="TextureRect" parent="gobackCage/GoBackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -65.7736
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="backIcon" type="TextureRect" parent="gobackCage"]
anchor_left = 0.0764331
anchor_top = 0.0125
anchor_right = 0.324841
anchor_bottom = 0.9875
texture = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="gobackIcon" type="TextureRect" parent="gobackCage/backIcon"]
anchor_left = 0.22906
anchor_top = 0.263314
anchor_right = 0.755489
anchor_bottom = 0.746548
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="goBack" type="Label" parent="gobackCage"]
anchor_left = 0.28718
anchor_top = 0.192306
anchor_right = 0.812821
anchor_bottom = 0.740384
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 42 )
text = "Bumalik"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="goback" type="Label" parent="gobackCage/goBack"]
anchor_right = 1.00488
anchor_bottom = 0.982456
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 43 )
text = "Bumalik"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="PrutasAtGulay" parent="." instance=ExtResource( 13 )]
unique_name_in_owner = true

[node name="MgaHayopSaBukid" parent="." instance=ExtResource( 12 )]
unique_name_in_owner = true

[connection signal="pressed" from="ScrollContainer/MarginContainer/HBoxContainer/Choice1/CardMenu1" to="." method="_on_CardMenu1_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/HBoxContainer/Choice2/CardMenu2" to="." method="_on_CardMenu2_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/HBoxContainer/Choice3/CardMenu3" to="." method="_on_CardMenu3_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/HBoxContainer/Choice4/CardMenu4" to="." method="_on_CardMenu4_pressed"]
[connection signal="pressed" from="VisibleBlockerRight/RightButton" to="ScrollContainer" method="_on_RightButton_pressed"]
[connection signal="pressed" from="VisibleBlockerLeft/LeftButton" to="ScrollContainer" method="_on_LeftButton_pressed"]
[connection signal="pressed" from="gobackCage/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="visibility_changed" from="MgaHayopSaBukid" to="MgaHayopSaBukid" method="_on_MgaHayopSaBukid_visibility_changed"]
